Adding some style to the website and a cool retro font.

--- a/css/theme-dark.css
+++ b/css/theme-dark.css
@@ -4,5 +4,7 @@
     --backg-secondary-r: 95;
     --backg-secondary-g: 23;
     --backg-secondary-b: 31;
-    --color-main: #f7e7e7;
+    --color-main: #f7f0f0;
+    --color-secondary: #f7f0f0;
+    --color-grayedout: #999;
 }
