--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,42 @@
-body, html {
-    font-family: Verdana, Geneva, Tahoma, sans-serif !important;
-    background: var(--backg-primary);
-    color: var(--color-main);
+
+/**
+ * Nihonium 113 and Nihonium 133 Console by UkiyoMoji
+ * https://www.1001fonts.com/nihonium113-font.html
+ */
+@font-face { font-family: "Nihonium 113"; src: url("../fonts/Nihonium113.ttf"); }
+@font-face { font-family: "Nihonium 113 Console"; src: url("../fonts/Nihonium113-Console.ttf"); }
+:root {
+    /* Nihonium 113 */
+    /* --h1-size: 48pt;
+    --h2-size: 42pt;
+    --h3-size: 36pt;
+    --h4-size: 30pt;
+    --h5-size: 24pt;
+    --h6-size: 18pt;
+    --p-size: 12pt; */
+
+    /* Nihonium 113 Console */
+    
+    --h1-size: 36pt;
+    --h2-size: 30pt;
+    --h3-size: 27pt;
+    --h4-size: 24pt;
+    --h5-size: 21pt;
+    --h6-size: 18pt;
+    --p-size: 9pt;
+   
 }
+
+body, html {
+    /* font-family: "Nihonium 113", Verdana, Geneva, Tahoma, Fixedsys, sans-serif !important; */
+    font-family: "Nihonium 113 Console", Fixedsys, Consolas, monospace !important;
+    background: var(--backg-primary) !important;
+    color: var(--color-main) !important;
+}
+h1 { font-size: var(--h1-size) !important }
+h2 { font-size: var(--h2-size) !important }
+h3 { font-size: var(--h3-size) !important }
+h4 { font-size: var(--h4-size) !important }
+h5 { font-size: var(--h5-size) !important }
+h6 { font-size: var(--h6-size) !important }
+p { font-size: var(--p-size) !important }
