--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,6 @@
     --p-size: 12pt; */
 
     /* Nihonium 113 Console */
-    
     --h1-size: 36pt;
     --h2-size: 30pt;
     --h3-size: 27pt;
@@ -24,7 +23,6 @@
     --h5-size: 21pt;
     --h6-size: 18pt;
     --p-size: 9pt;
-   
 }
 
 body, html {
@@ -40,3 +38,11 @@ h4 { font-size: var(--h4-size) !important }
 h5 { font-size: var(--h5-size) !important }
 h6 { font-size: var(--h6-size) !important }
 p { font-size: var(--p-size) !important }
+
+.win9x-ico {
+    height: 160px !important;
+    width: 160px !important;
+    image-rendering: pixelated;
+    object-fit: contain;
+    margin: 0 auto;
+}
